[gd_scene load_steps=6 format=3 uid="uid://enemy_scene"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_enemy"]
[ext_resource type="PackedScene" path="res://assets/Meshy_AI_Regent_Alkestis_0104172301_texture_fbx.fbx" id="2_model"]
[ext_resource type="PackedScene" path="res://scenes/enemy_health_bar.tscn" id="3_health_bar"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_enemy"]
height = 2.4
radius = 0.6

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hurtbox"]
height = 2.4
radius = 0.72

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
collision_layer = 10
collision_mask = 3
script = ExtResource("1_enemy")

[node name="EnemyModel" parent="." instance=ExtResource("2_model")]
transform = Transform3D(-1.2, 0, 0, 0, 1.2, 0, 0, 0, -1.2, 0, 0.0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../EnemyModel")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("CapsuleShape3D_enemy")

[node name="HealthBar" parent="." instance=ExtResource("3_health_bar")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.0, 0)

[node name="Hurtbox" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="HurtboxShape" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("CapsuleShape3D_hurtbox")

[node name="GroundCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08, 0)
target_position = Vector3(0, -1.2, 0)
enabled = true
collision_mask = 1
